--- a/front/package.json
+++ b/front/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
   },
   "author": "noah",
   "license": "MIT",
   "dependencies": {
+    "antd": "^4.0.3",
     "next": "^9.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
